change to config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: GearShed
 email: info@gearshed.co.uk
 description: "The GearShed is a community led, peer-to-peer marketplace where you can rent out other people’s outdoor equipment for short blocks of time. We make it easy to connect weekend warriors with people that have spare or unused gear. "
-baseurl: "Gearshed-Blog/"
+baseurl: ""
 url: "http://gearshed.co.uk"
 twitter_username: gear_shed
 google_url: "https://plus.google.com/102603454118266817614"
